# missionaries-and-cannibals

./: Main.hs  README.md  Simulation.hs  build.cmd  missionaries-and-cannibals.cabal  stack.yaml
src/: Main.hs
