name:                missionaries-and-cannibals
version:             0.1.0.0
synopsis:            Missionaries and Cannibals
homepage:            https://github.com/qsctr/missionaries-and-cannibals
license:             MIT
author:              Bretton
build-type:          Simple
cabal-version:       >=1.10

executable missionaries-and-cannibals
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ansi-terminal
  ghc-options:         -Wall -fno-warn-incomplete-patterns